--- a/modification.html
+++ b/modification.html
@@ -567,7 +567,7 @@ create_graph(graph_attrs =
 </code></pre>
                     </div>
                     <h2 id="setting-a-graphs-name-and-time-attributes">Setting a Graph's Name and Time Attributes</h2>
-                    <p></p>
+                    <p>Setting the graph's name and time attributes can be useful when there is a collection of graphs and such properties can help when distinguishing the graph objects. The functions that deal with graph series objects can take advantage of any graph names and graph date-time values that are available. The <code>create_graph()</code> function affords the option to set these parameters upon graph creation, however, the <code>set_graph_name()</code> and <code>set_graph_time</code> provide additional opportunities to add, modify, or remove such attributes.</p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
@@ -583,7 +583,8 @@ create_graph(graph_attrs =
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
-                    <p></p>
+                    <p>The <code>set_graph_name()</code> function takes a <code>graph</code> object and a value for the <code>graph_name</code> (this can be provided as <code>numeric</code> value but will be coerced to a <code>character</code> value.</p>
+                    <p>The <code>set_graph_time()</code> function can be provided with a date or date-time string (for the <code>graph_time</code> argument). This will be useful if the graph is to be inserted into a graph series of the <code>temporal</code> type. An optional value for the time zone (tz) corresponding to the date or date-time string supplied as a value to <code>graph_time</code>. If no time zone is provided then it will be implicitly set to GMT.</p>
                     <div>
                         <pre><code class="prettyprint">
 </code></pre>
