--- a/modification.html
+++ b/modification.html
@@ -583,8 +583,7 @@ create_graph(graph_attrs =
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
-                    <p>The <code>set_graph_name()</code> function takes a <code>graph</code> object and a value for the <code>graph_name</code> (this can be provided as <code>numeric</code> value but will be coerced to a <code>character</code> value.</p>
-                    <p>The <code>set_graph_time()</code> function can be provided with a date or date-time string (for the <code>graph_time</code> argument). This will be useful if the graph is to be inserted into a graph series of the <code>temporal</code> type. An optional value for the time zone (tz) corresponding to the date or date-time string supplied as a value to <code>graph_time</code>. If no time zone is provided then it will be implicitly set to GMT.</p>
+                    <p>The <code>set_graph_name()</code> function takes a <code>graph</code> object and a value for the <code>graph_name</code> (this can be provided as <code>numeric</code> value but will be coerced to a <code>character</code> value. The same function can set a graph's name (changing from the default <code>NULL</code>) and also modify a graph's name (replacing the value).</p>
                     <div>
                         <pre><code class="prettyprint">###
 # Set the graph's name, then
@@ -610,6 +609,47 @@ graph %&lt;>% set_graph_name(1)
 # Verify that the name has changed
 graph$graph_name
 #> [1] "1"</code></pre>
+                    </div>
+                    <p>The <code>set_graph_time()</code> function can be provided with a date or date-time string (for the <code>graph_time</code> argument). This will be useful if the graph is to be inserted into a graph series of the <code>temporal</code> type. An optional value for the time zone (tz) corresponding to the date or date-time string supplied as a value to <code>graph_time</code>. If no time zone is provided then it will be implicitly set to GMT.</p>
+                    <div>
+                        <pre><code class="prettyprint">###
+# Set the graph's date/time value,
+# then modify the these properties
+###
+
+library(DiagrammeR)
+library(magrittr)
+
+# Create an empty graph
+graph &lt;- create_graph()
+
+# Set the graph's time attribute with
+# a well-formed date ("YYYY-MM-DD")
+graph %&lt;>% set_graph_time("2015-01-30")
+
+# Check the `graph_time` attribute
+graph$graph_time
+#> [1] "2015-01-30"
+
+# Note that since the time zone was
+# not provided, the default is `GMT`
+graph$graph_tz
+#> [1] "GMT"
+
+# I'll update the `graph_time`
+# attribute with an actual
+# timestamp (i.e., date + time) and
+# a time zone
+graph %&lt;>%
+  set_graph_time("2015-01-30 15:26:54",
+                 "Pacific/Pago_Pago")
+
+# Let's check both the time and
+# the time zone set for the graph
+c(graph$graph_time,
+  graph$graph_tz)
+#> [1] "2015-01-30 15:26:54"
+#> [2] "Pacific/Pago_Pago"</code></pre>
                     </div>
                     <h2 id="setting-global-attributes-for-a-graph">Setting Global Attributes for a Graph</h2>
                     <p></p>
