--- a/inspection.html
+++ b/inspection.html
@@ -647,7 +647,7 @@ node_count(graph, type = FALSE)
 #> [1] 26</code></pre>
                     </div>
                     <h2 id="is-the-graph-empty-directed">Is the Graph Empty? Directed?</h2>
-                    <p>Rather than using accessing the graph object to determine whether the graph is empty or whether it is a directed graph, you can use the <code>is_graph_empty()</code> or <code>is_graph_directed()</code> function to return a logical value. This slightly improves code readability over using statements such as <code>is.null([graph]$nodes_df)</code> or <code>[graph]$directed</code> to get the same answer.</p>
+                    <p>Rather than accessing the graph object to determine whether the graph is empty or whether it is a directed graph, you can use the <code>is_graph_empty()</code> or <code>is_graph_directed()</code> function to return a logical value. This slightly improves code readability over using statements such as <code>is.null([graph]$nodes_df)</code> or <code>[graph]$directed</code> to get the same answer.</p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
