--- a/inspection.html
+++ b/inspection.html
@@ -760,7 +760,25 @@ create_graph() %>%
 #> [1] "1" "1" "1" "1" "1"
 #>
 #> $edges$to
-#> [1] "2" "3" "4" "5" "6"</code></pre>
+#> [1] "2" "3" "4" "5" "6"
+
+# With the magic of `magrittr`,
+# print a character vector that
+# schematically represents the
+# selection of edges
+create_graph() %>%
+  add_n_nodes(1) %>%
+  select_nodes %>%
+  add_n_nodes_from_selection(5) %>%
+  select_edges_by_node_id(1:6) %>%
+  get_selection %>%
+  {
+    from &lt;- .$edges %>% .$from
+    to &lt;- .$edges %>% .$to
+    combined &lt;- paste(from, "->", to)
+  } %>% print
+#> [1] "1 -> 2" "1 -> 3" "1 -> 4" "1 -> 5"
+#> [5] "1 -> 6"</code></pre>
                     </div>
                     <h2 id="obtaining-path-information-from-a-graph">Obtaining Path Information from a Graph</h2>
                     <p>For a directed graph, a list of all possible paths from a between two nodes, or, to or from a given node can be obtained with the <code>get_paths()</code> function. There are options to filter the list of paths returned to only the shortest paths, the longest paths, or to those paths within a given range of distances.</p>
