--- a/graph_creation.html
+++ b/graph_creation.html
@@ -145,14 +145,16 @@ graph &lt;- create_graph()
 class(graph)
 #> [1] "dgr_graph"
 
-# It's an empty graph, so no NDF or EDF
+# It's an empty graph, so no NDF
+# or EDF
 graph$nodes_df
 #> NULL
 
 graph$edges_df
 #> NULL
 
-# By default, the graph is considered as directed
+# By default, the graph is
+# considered as directed
 graph$directed
 #> [1] TRUE</code></pre>
                     </div>
@@ -185,7 +187,8 @@ nodes
 #> 3     3 lower       filled  aqua rectangle  9.4
 #> 4     4 lower       filled  aqua rectangle  2.7
 
-# Create the graph and include the `nodes` NDF
+# Create the graph and include the
+# `nodes` NDF
 graph &lt;-
   create_graph(nodes_df = nodes)
 
@@ -244,7 +247,8 @@ graph &lt;-
                    "arrowsize = 2")
   )
 
-# Examine the NDF within the graph object
+# Examine the NDF within the
+# graph object
 graph$nodes_df
 #>   nodes  type label  style color     shape data
 #> 1     a lower       filled  aqua    circle  3.5
@@ -273,23 +277,27 @@ graph$edges_df
                     <p>If you'd like to return the <strong>Graphviz</strong> <strong>DOT</strong> code (to, perhaps, share it or use it directly with the <strong>Graphviz</strong> command-line utility), just use <code>output = "DOT"</code> in the <code>render_graph()</code> function. Here's a simple example:</p>
                     <div>
                         <pre><code class="prettyprint">###
-# Create a simple graph and display it
+# Create a simple graph
+# and display it
 ###
 
 library(DiagrammeR)
 
-# Create simple node and edge data frames
+# Create a simple NDF
 nodes &lt;-
   create_nodes(nodes = 1:4,
                type = "number")
 
+# Create a simple EDF
 edges &lt;-
   create_edges(from = c(1, 1, 3, 1),
                to = c(2, 3, 4, 4),
                rel = "related")
 
-# Create the graph object, incorporating the NDF and
-# the EDF, and, providing some global attributes
+# Create the graph object,
+# incorporating the NDF and
+# the EDF, and, providing
+# some global attributes
 graph &lt;-
   create_graph(
     nodes_df = nodes,
@@ -312,18 +320,21 @@ render_graph(graph)</code></pre>
 library(DiagrammeR)
 library(magrittr)
 
-# Create simple node and edge data frames
+# Create a simple NDF
 nodes &lt;-
   create_nodes(nodes = 1:4,
                type = "number")
 
+# Create a simple EDF
 edges &lt;-
   create_edges(from = c(1, 1, 3, 1),
                to = c(2, 3, 4, 4),
                rel = "related")
 
-# Create the graph object, incorporating the NDF and
-# the EDF, and, providing some global attributes
+# Create the graph object,
+# incorporating the NDF and
+# the EDF, and, providing some
+# global attributes
 graph &lt;-
   create_graph(
     nodes_df = nodes,
@@ -332,8 +343,8 @@ graph &lt;-
     node_attrs = "fontname = Helvetica",
     edge_attrs = "color = gray20")
 
-# Use the %>% operator between `create_graph()` and
-# `render_graph()`
+# Use the %>% operator between
+# `create_graph()` and `render_graph()`
 create_graph(
   nodes_df = nodes,
   edges_df = edges,
@@ -352,18 +363,21 @@ create_graph(
 library(DiagrammeR)
 library(magrittr)
 
-# Create simple node and edge data frames
+# Create a simple NDF
 nodes &lt;-
   create_nodes(nodes = 1:4,
                type = "number")
 
+# Create a simple EDF
 edges &lt;-
   create_edges(from = c(1, 1, 3, 1),
                to = c(2, 3, 4, 4),
                rel = "related")
 
-# Create the graph object, incorporating the NDF and
-# the EDF, and, providing some global attributes
+# Create the graph object,
+# incorporating the NDF and
+# the EDF, and, providing
+# some global attributes
 graph &lt;-
   create_graph(
     nodes_df = nodes,
@@ -373,8 +387,9 @@ graph &lt;-
     edge_attrs = "color = gray20"
   )
 
-# Use the %>% operator between `create_graph()` and
-# `render_graph()` (using the output = "DOT" option)
+# Use the %>% operator between
+# `create_graph()` and `render_graph()`
+# (using the output = "DOT" option)
 create_graph(
   nodes_df = nodes,
   edges_df = edges,
@@ -384,8 +399,9 @@ create_graph(
 ) %>% render_graph(output = "DOT")
 #> [1] "digraph {\n\ngraph [layout = neato]\n\nnode [fontname = Helvetica]\n\nedge [color = gray20]\n\n  '1' [label = '1'] \n  '2' [label = '2'] \n  '3' [label = '3'] \n  '4' [label = '4'] \n  '1'->'2' \n  '1'->'3' \n  '3'->'4' \n  '1'->'4' \n}"
 
-# Use the R `cat()` function to direct the DOT code
-# to a `.gv` file (DiagrammeR can open this file
+# Use the R `cat()` function to
+# direct the DOT code to a `.gv` file
+# (DiagrammeR can open this file
 # directly for viewing and editing)
 create_graph(
   nodes_df = nodes,
@@ -416,6 +432,9 @@ create_graph(
 
 library(DiagrammeR)
 
+# Create a simple, random graph
+# and render with the `visNetwork`
+# output option
 render_graph(
   create_random_graph(n = 2, m = 1),
   output = "visNetwork")</code></pre>
@@ -428,6 +447,10 @@ render_graph(
 
 library(DiagrammeR)
 
+# Create a random graph with
+# 15 nodes and twice as many edges
+# and then render the graph with
+# the `visNetwork` output option
 render_graph(
   create_random_graph(n = 15, m = 30),
   output = "visNetwork")</code></pre>
@@ -462,7 +485,8 @@ render_graph(
                     <p>Going the opposite way, you don't need to have edges. Simply specify <code>m = 0</code> for any number of nodes <code>n</code>:</p>
                     <div>
                         <pre><code class="prettyprint">###
-# Create a random graph of 15 nodes with no edges
+# Create a random graph with
+# many nodes but with no edges
 ###
 
 library(DiagrammeR)
